# personalized-shopping

./: .gitignore  DEMO_GUIDE.md  DEMO_STORYLINE.md  README.md  Service_Blueprint_Prototype_Journeys.html  TESTS.md  frontend.Dockerfile
client/: Dockerfile  README.md  cloudbuild.yaml  index.html  nginx.conf  sample_conversation.txt
client/assets/: product_image_mapping.json
crm/: Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml
crm/core/: app.py
crm/static/: architecture.html  index.html  script.js  style.css
docs/: DEMO_STORYLINE.md  DEPLOYMENT_GUIDE.md  TEST_SUITE_SKILL.md
server/: .dockerignore  .env.copy  .env.example  Dockerfile  README.md  cloudbuild.yaml  database_reset.py  init_sample_data.py  requirements.txt  server.py
server/config/: config.py  system-instructions.txt
server/core/: agent_factory.py  auth.py  cost_tracker.py  logger.py  models.py  observability.py  retry.py  security.py  session_state.py  session_utils.py  websocket_handler.py
server/data/: customer_profiles.json
server/evaluation/: eval_config.py  image_eval.py  run_eval.py  session_recorder.py
server/scripts/: create_placeholder.py  generate_images_with_imagen.py  generate_product_images.py  generate_theme_images.py  upload_assets_to_gcs.py
server/tests/: retail_agent.evalset.json  test_auth.py  test_cost_tracker.py  test_eval_metrics.py  test_intent_detector.py  test_retry.py  (+7 more)
terraform/: api_gateway.tf  cloud_run.tf  cloudbuild.yaml  gcs.tf  iam.tf  main.tf  monitoring.tf  openapi.yaml  outputs.tf  security.tf  variables.tf  vector_search.tf  vpc.tf
(+19 files in other folders)
