[project]
name = "crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "firestore>=0.0.8",
    "uvicorn[standard]>=0.34.2",
    "google-cloud-storage>=2.14.0",
    "vertexai>=1.43.0,<1.60.0",
    "google-genai>=1.0.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
]
